* Added space between lines * Signs are aligned by KWIC * Added space after similar text * Underline restored for signs' links * Fixed gradient

--- a/src/signs/ui/search/Signs.sass
+++ b/src/signs/ui/search/Signs.sass
@@ -48,8 +48,8 @@
   font-family: Assurbanipal, Junicode, serif
 
 .Neo-Babylonian
-  font-size: 125%
-  font-family: 'Esagil'
+  font-size: 150%
+  font-family: Neo-Babylonian,'Adobe Blank', Junicode, serif
 
 .beginning
   background: linear-gradient(to left, grey 50%, blue 50%)
@@ -57,7 +57,19 @@
 .ending
   background: linear-gradient(to right, grey 50%, blue 50%)
 
+.similar_text
+  padding-right: 5px
 .secondary
   -webkit-background-clip: text
   -webkit-text-fill-color: transparent
   padding: 0.3em 0
+  margin-left: 5px
+
+.before
+  text-align: right
+.after
+  text-align: left
+
+span a:hover
+  text-decoration: underline
+  -webkit-text-fill-color: #0056b3
